﻿v3.1.0

- Improved Analyzer: PH_S007 - Now respects activation frames
- Improved Analyzer: PH_P007 - Now reports default expressions where a token is available


------------------

v3.0.0

- Upgraded the .NET Compiler Platform (Roslyn) to version 3.3.1
- Raised the minimum required Visual Studio version to 16.3
- Added foundation for more fine-granular analyzer configuration
- New Analyzer: PH_B014 - Await On Conditional Access
- New Analyzer: PH_S032 - Throws in Potentially Async Method
- New Analyzer: PH_P012 - Prefer Slim Synchronization
- Improved Analyzer: PH_B010 - Now ignores volatile fields by default
- Improved Analyzer: PH_S005 - Ignoring interface implementations and method overrides is now configurable


------------------

v2.3.0

- New Analyzer: PH_B013 - Null-Check Against Task Instead of Value
- New Analyzer: PH_P011 - Replace With Async Stream
- New Analyzer: PH_S031 - Monitor.Wait Inside Async Method or Task
- Improved Analyzer: PH_S019 - Now respects activation frames
- Improved Analyzer: PH_B009 - Now ignores fields of foreign classes
- Improved Analyzer: PH_B010 - Now ignores fields of foreign classes
- Fixed Analyzer: PH_S002 - No longer crashes when the sync object is declared in a foreign file


------------------

v2.2.0

- New Analyzer: PH_S029 - ThreadLocal in Async Method
- New Analyzer: PH_S030 - Async Void Method Invocation
- Improved Analyzer: PH_S005 - Now ignores interface implementations and method overridings.
- Improved Analyzer: PH_S026 - Now ignores tasks that have been potentially awaited before.


------------------

v2.1.0

- New Analyzer: PH_P010 - Async Instead of Continuation
- New Analyzer: PH_S027 - Leaked Outbound Collection
- New Analyzer: PH_S028 - Leaked Inbound Collection
- Adapted Analyzer: PH_B008 - Now only reports unsafe LINQ operations for ConcurrentDictionary
- Improved Analyzer: PH_S014 - Now reports all task returning delegates