@@ -2,6 +2,7 @@
 
 - Improved Analyzer: PH_S007 - Now respects activation frames
 - Improved Analyzer: PH_P007 - Now reports default expressions where a token is available
+- Improved Analyzer: PH_S025 - Now respects activation frames
 
 
 ------------------
